# clipboard-image-saver

./: .gitmodules  README.md  build.sh  check.sh  settings.json
frontend/: .gitignore  Cargo.toml  glue.js  index.html
frontend/src/: main.rs
frontend/src/components/: clipboard_image.rs  control_button.rs  controls.rs  main_view.rs  settings.rs  underline_text.rs  widget.rs
frontend/src/static/: glue.js  style.css
shared/: .gitignore  Cargo.toml  settings.rs
shared/src/: main.rs  settings.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
