[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
web-sys = { version = "0.3.58", features = ["HtmlSelectElement"] }
yew = "0.19.3"
shared = { path = "../shared", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
strum = "0.24.1"
strum_macros = "0.24.2"
